# Remy

./: .gitignore  LICENSE  README.md
doc/: architecture.puml
pollytest/: .gitignore  Cargo.toml
pollytest/src/: main.rs
sapitest/: README.md
sapitest/create_wav/: CMakeLists.txt  create_wav.bat  create_wav.cpp
sapitest/read_wav/: CMakeLists.txt  read_wav.cpp  read_wav.sh  speak_events.h  speak_phonemes.h  speak_visemes.h
